Overflow issue

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     padding: 0;
     margin: 0;
