--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,10 @@
           box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   padding: 0;
   margin: 0;
